Check for game ending

--- a/src/standalone.properties
+++ b/src/standalone.properties
@@ -1,5 +1,5 @@
 # suppress inspection "UnusedProperty" for whole file
-main.class=MenuWorld
+main.class=GameWorld
 controls.pause.button=Pause
 controls.run.button=Start
 run.once=Run
